--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,4 @@
-@import 'flowbite' layer(utilities);
-@import 'tailwindcss/utilities' layer(utilities);
+@import "tailwindcss";
 
 @plugin 'flowbite-react/plugin/tailwindcss';
 
