fix: Optimize loading, processing, and metadata fetching performance
Plus some other small bug fixes like drag to refresh on mobile showing up when reordering settings tabs.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -90,7 +90,8 @@ button:active {
     height: 12px;
   }
 
-  .mobile-scrollbar-hide::-webkit-scrollbar {
+  .mobile-scrollbar-hide::-webkit-scrollbar,
+  .mobile-scrollbar-hide *::-webkit-scrollbar {
     display: none;
   }
 
